objects/Loyalty__c.object
<CustomObject>
    <fields>
        <fullName>All_Miles__c</fullName>
        <formula>&quot;Total Miles is now &quot;  &amp;  Text(Total_Miles__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Miles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loyalty</relationshipLabel>
        <relationshipName>Loyalty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gold_Bonus__c</fullName>
        <defaultValue>1000</defaultValue>
        <label>Gold Bonus</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles_Diff__c</fullName>
        <formula>Miles__c -  Old_Miles__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Miles Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miles__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Miles</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Programme__c</fullName>
        <label>New Programme</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Miles__c</fullName>
        <label>Old Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Programme__c</fullName>
        <label>Old Programme</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Bonus__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Platinum Bonus</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                    <default>true</default>
                    <label>Blue</label>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Silver_Bonus__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Silver Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Miles__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Miles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loyalty</label>
    <nameField>
        <displayFormat>LOY-{0000000}</displayFormat>
        <label>Loyalty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>